--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         google()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:3.5.4"
@@ -20,6 +21,7 @@ allprojects {
         google()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
         jcenter()
+        mavenCentral()
     }
 }
 
