--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,6 @@ android {
         abortOnError false
     }
 
-
-
 }
 
 
@@ -60,9 +58,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.2'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.annotation:annotation:1.2.0'
     //design包
     implementation 'com.google.android.material:material:1.2.1'
+
+    implementation("io.coil-kt:coil:1.1.1")
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
