--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,23 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+litearouter_main_version=1.1.5
+publishedGroupId=io.github.molushihuang
+siteUrl=https://github.com/molushihuang/mvvmQuick
+gitUrl=https://github.com/molushihuang/mvvmQuick.git
+developerId=garyxie
+developerName=xqd
+developerEmail=xieqiudongv5@gmail.com
+
+licenseName=The Apache Software License, Version 2.0
+licenseUrl=http://www.apache.org/licenses/LICENSE-2.0.txt
+allLicenses=["Apache-2.0"]
+
+
+# MavenCentral
+signing.keyId=3D1734BD
+signing.password=200822xx
+signing.secretKeyRingFile=C\:\\Users\\Administrator\\Administrator_0x3D1734BD_SECRET.gpg
+ossrhUsername=xqd
+ossrhPassword=200822XXccvv@
