--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,13 @@
 buildscript {
     ext.kotlin_version = "1.4.32"
     repositories {
-        google()
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        jcenter()
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
         mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:3.5.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.novoda:bintray-release:0.9.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,9 +16,8 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        jcenter()
+        maven { url 'https://maven.aliyun.com/repository/google' }
+        maven { url 'https://maven.aliyun.com/repository/public' }
         mavenCentral()
     }
 }
@@ -28,3 +25,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
